# pysofft

./: .gitignore  .readthedocs.yaml  README.md  doxygen.conf  meson.build  mkdocs.yml  pyproject.toml  pyproject.toml.old  setup.py
docs/: accuracy.md  api_structure.md  array.md  coeff.md  cross_correlation.md  index.md  requirements.in  requirements.txt  so3_grid.md  speed.md  style.css  usage.md  wigner.md
docs/api/: python.md  structure.md
docs/api/fortran/: make_wigner.md
docs/api/python/: fftw.md  omp.md  soft.md  stats.md
docs/defs/: coeff.md  so3_func.md  so3_grid.md  wigner.md
docs/hooks/: unescape_pipe_in_pymdownx_details.py
docs/javascripts/: mathjax.js
docs/stylesheets/: width.css
docs/templates/: github_source_link.jinja2  memDef.jinja2  memTab.jinja2  member.jinja2
docs/templates2/python/material/: class.html.jinja  function.html.jinja  module.html.jinja  source_link.html.jinja
docs/usage/: corr.md  fftw.md  multi.md  parallelization.md  simple.md  stats.md
docs/utils/: triangular_to_flat_index.md
pysofft/: __init__.py  _fftw_aligned_alloc.c  f2py_command.txt  f2py_command_obj.txt  f2py_skip.txt  fftw.py  gfortran_command.txt  make_wiegner.py  make_wigner.f95  make_wigner_separate.f95  math_constants.f90  meson.build  omp.py  precision.f90  py_wrap.f90  rotate.py  soft.f08  soft.f95  soft.py  soft_class.f95  soft_test  soft_timing.f95  stats.py  utils.f90  wigner.f90  wignerTransform.py
pysofft/old/: __init__.py  make_wiegner.py  meson.build  rotate.py  soft.py
pysoft/: __init__.py  make_wiegner.py  rotate.py  soft.py  test_rotate.py  wignerWeights.py
tests/: c_arrays.py  fortran_backed.py  test_fortran_backend.py  test_rotate.py  test_soft.py  test_wigner_transforms.py  test_wigners.py
