[project]
name = "pysofft"
version = "0.9.1"
description = "Complete rewrite of the C library SOFT 2.0, that computes fourier transforms on the rotation group SO(3)"
keywords = ["SO(3)", "FFT", "fourier transform", "SOFT"]
readme = "README.md"
authors = [
    {name="Tim Berberich",email = "tim.berberich@xfel.eu"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",  
]
dependencies = [
    "numpy",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/TimBerberich/pysofft"

[build-system]
build-backend = "mesonpy"
requires = ["meson-python","meson","ninja","wheel","numpy","charset-normalizer"]
