[project]
name = "pysofft"
version = "0.9.4"
description = "Complete rewrite of the C library SOFT 2.0, that computes fourier transforms on the rotation group SO(3)"
keywords = ["SO(3)", "FFT", "fourier transform", "SOFT"]
readme = "README.md"
authors = [
    {name="Tim Berberich",email = "tim.berberich@xfel.eu"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",  
]
dependencies = [
    "numpy>=2.2.0,<3.0.0",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/TimBerberich/pysofft"

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.19.0,<0.20","meson>=1.8.1,<1.9.0","ninja","wheel","numpy>=2.2.0,<3.0.0","charset-normalizer"]
